asco startup improvements
Ignore-this: 41a4ce074e02e64166164813879380b

darcs-hash:20100613075606-312f9-3bcbba7e6ea8304ff5a7076c4c3e8e27c8e7acb7.gz

--- a/light9/ascoltami/index.html
+++ b/light9/ascoltami/index.html
@@ -29,7 +29,8 @@
       <button id="cmd-go">Go  <div class="key">space</div></button>
     </div>
 
-todo: go button actions, display next action
+    todo: go button actions, display next action
+    <a href="">reload</a>
 
 <script type="text/javascript">
 // <![CDATA[
