cleanup asco to use song uris consistently. showPaths are now file: uris
Ignore-this: 8ca9cfa22e340760c02a980009499ca3

darcs-hash:20100613091949-312f9-8c75b7e069d7cde0d48f8ced2ec750c62e71c373.gz

--- a/light9/ascoltami/index.html
+++ b/light9/ascoltami/index.html
@@ -67,7 +67,7 @@ $(function () {
     function showCurrentSong(uri) {
 	$(".songs div").each(function (i, row) {
 	    row = $(row);
-	    if (row.find("button").data("path") == uri) {
+	    if (row.find("button").data("uri") == uri) {
 		row.addClass("currentSong");
 	    } else {
 		row.removeClass("currentSong");
@@ -81,7 +81,7 @@ $(function () {
 	    button.text(song.label);
 	    button.data(song);
 	    button.click(function () {
-		$.post("song", button.data("path"), 
+		$.post("song", button.data("uri"), 
 		       function (data, textStatus, xhr) {
 			   showCurrentSong(song.uri);
 		       });
