asco displays hostname and sends better content-type headers
Ignore-this: a25ba775fa44991c2166740410297eae

darcs-hash:20110615053223-312f9-8ed80f761fa122af5cd8e6955cf8c4ce143e3f6e.gz

--- a/light9/ascoltami/index.html
+++ b/light9/ascoltami/index.html
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+      xmlns:py="http://genshi.edgewall.org/">
   <head>
-    <title>ascoltami</title>
+    <title>ascoltami on ${host}</title>
     <script type="text/javascript" src="static/jquery-1.4.2.min.js"></script>
       <script type="text/javascript" src="static/jquery-ui-1.8.2.custom/js/jquery-ui-1.8.2.custom.min.js"></script>
       <link rel="Stylesheet" type="text/css" href="static/jquery-ui-1.8.2.custom/css/smoothness/jquery-ui-1.8.2.custom.css"/>
       <link rel="Stylesheet" type="text/css" href="static/style.css"/>
   </head>
   <body>
-
+    <h1>ascoltami on ${host}</h1>
     <div class="songs"/>
 
     <div>Song: <span id="currentSong"/></div>
