display gst pipeline state on the web gui
Ignore-this: a4aed9827021e178701c6ea79be3e87a

darcs-hash:20110621002448-312f9-7bf3b0195d9d01b2b4bb7f9cd853d2212450a123.gz

--- a/light9/ascoltami/index.html
+++ b/light9/ascoltami/index.html
@@ -18,6 +18,7 @@
     <div>Time: <span id="currentTime"/></div>
     <div>Left: <span id="leftTime"/></div>
     <div>Until autostop: <span id="leftAutoStopTime"/></div>
+    <div>States: <span id="states"/></div>
     <div class="timeRow">
       <div id="timeSlider"/>
     </div>
@@ -55,6 +56,7 @@ $(function () {
 	    $("#leftTime").text((data.duration - data.t).toFixed(1));
 	    $("#leftAutoStopTime").text(
 		Math.max(0, data.duration - times.post - data.t).toFixed(1));
+	    $("#states").text(JSON.stringify(data.state));
 	    currentDuration = data.duration;
 	    $("#timeSlider").slider({value: data.t,
 				     max: data.duration});
